@@ -1,3 +1,9 @@
+2015-04-27         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* Makefile.am (regexpbrack2): New test.
+	* regexpbrack2.awk, regexpbrack2.in, regexpbrack2.ok: New files.
+	Thanks to Nelson Beebe.
+
 2015-04-14         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* indirectbuiltin.awk: Add another test (gensub 3 args).
