@@ -1,3 +1,8 @@
+2015-04-27         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* awkgram.y (yylex): Make change of Jan 7 for parsing regexps
+	work better. Thanks to Nelson Beebe.
+
 2015-04-26         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* dfa.c: Sync with grep.
